--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,25 +10,23 @@ html, body {
     overscroll-behavior: contain;
 }
 
-#debug {
-    color: #fcfcfc;
-    color: #FF1010;
-    color: #FFFF10;
-    color: #10FF10;
-    color: #10FFFF;
-    color: #1010FF;
-    color: #FF10FF;
-    color: #A01010;
-    color: #A0A010;
-    color: #10A010;
-    color: #10A0A0;
-    color: #1010A0;
-    color: #A010A0;
-    color: #000000;
-}
-
 .header {
     grid-area: header;
+}
+
+.picker {
+    grid-area: picker;
+    background: linear-gradient(to right, #399b4e, #869c99);
+
+    .color-picker {
+        display: inline-block;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 3px;
+        height: 30px;
+        width: 30px;
+        margin: 5px;
+        box-shadow: 3px 3px 3px #00000017;
+    }
 }
 
 .content {
@@ -61,8 +59,8 @@ html, body {
 
 .grid-container {
     display: grid;
-    grid-template-areas: "header" "content" "footer";
-    grid-template-rows: 80px auto 30px;
+    grid-template-areas: "header" "picker" "content" "footer";
+    grid-template-rows: 40px 80px auto 20px;
     background-color: #2f3a43;
     height: 100vh;
     width: 100vw;
