--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,16 +1,16 @@
 $colors: (
         #FCFCFC,
-        #FF1010,
-        #FFFF10,
-        #10FF10,
-        #10FFFF,
-        #1010FF,
-        #FF10FF,
-        #A01010,
-        #A0A010,
-        #10A010,
-        #10A0A0,
-        #1010A0,
-        #A010A0,
         #000000,
+        #FF1010,
+        #FF8810,
+        #FFFF10,
+        #88FF10,
+        #10FF10,
+        #10FF88,
+        #10FFFF,
+        #08A3FF,
+        #0047ff,
+        #802CFF,
+        #FF10FF,
+        #FF1088,
 );
