--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -17,15 +17,29 @@ html, body {
 .picker {
     grid-area: picker;
     background: linear-gradient(to right, #399b4e, #869c99);
+    display: flex;
+    flex-direction: horizontal;
+}
+
+.color-picker-container {
+    flex: 5;
+    display: flex;
+    flex-wrap: wrap;
 
     .color-picker {
-        display: inline-block;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 3px;
         height: 30px;
         width: 30px;
-        margin: 5px;
-        box-shadow: 3px 3px 3px #00000017;
+        margin: 10px 5px;
+        border: 2px solid rgb(255, 255, 255);
+        border-radius: 100%;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 10px rgba(114, 114, 114, 0.3) inset;
+        transform: scale(1);
+        transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.3);
+        }
     }
 }
 
@@ -60,7 +74,7 @@ html, body {
 .grid-container {
     display: grid;
     grid-template-areas: "header" "picker" "content" "footer";
-    grid-template-rows: 40px 80px auto 20px;
+    grid-template-rows: max-content max-content auto max-content;
     background-color: #2f3a43;
     height: 100vh;
     width: 100vw;
