--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,9 @@
 html {
     width: 100%;
     height: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 html, body {
@@ -18,7 +21,7 @@ html, body {
     grid-area: picker;
     background: linear-gradient(to right, #399b4e, #869c99);
     display: flex;
-    flex-direction: horizontal;
+    flex-direction: row;
 }
 
 .color-picker-container {
@@ -27,6 +30,7 @@ html, body {
     flex-wrap: wrap;
 
     .color-picker {
+        position: relative;
         height: 30px;
         width: 30px;
         margin: 10px 5px;
@@ -39,6 +43,31 @@ html, body {
         &:hover {
             cursor: pointer;
             transform: scale(1.3);
+        }
+
+        &:after {
+            content: '✔';
+            display: block;
+            position: absolute;
+            line-height: 30px;
+            text-align: center;
+            left: 0;
+            right: 0;
+            transform: rotate(-20deg);
+            transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
+            opacity 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            pointer-events: none;
+            opacity: 0;
+            font-size: 32px;
+        }
+
+        &.active {
+            transform: scale(1.4);
+
+            &:after {
+                transform: rotate(0deg);
+                opacity: 1;
+            }
         }
     }
 }
