--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,114 +1,146 @@
+@import "variables";
+
 html {
-    width: 100%;
-    height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  width: 100%;
+  height: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    color: white;
-    overscroll-behavior: contain;
+  margin: 0;
+  padding: 0;
+  color: white;
+  overscroll-behavior: contain;
 }
 
 .header {
-    grid-area: header;
+  grid-area: header;
 }
 
 .picker {
-    grid-area: picker;
-    background: linear-gradient(to right, #399b4e, #869c99);
-    display: flex;
-    flex-direction: row;
-}
+  grid-area: picker;
+  background: linear-gradient(to right, #399b4e, #869c99);
+  display: flex;
+  flex-wrap: wrap;
+  align-items:center;
 
-.color-picker-container {
-    flex: 5;
+  $label-width: 200px;
+
+  .label {
+    $padding: 20px;
+    flex: 1 0 calc(#{$label-width} - #{$padding * 2});
+    padding: $padding;
+
+    @media only screen and (max-width : $breakpoint) {
+      flex: 1 0 100%;
+    }
+
+    span {
+      display: inline-block;
+      width: 17px;
+      line-height: 17px;
+      text-align: center;
+      font-weight: bold;
+      border: 1px solid white;
+      border-radius: 100%;
+    }
+  }
+
+  .row-content {
+    flex: 1 0 calc(100% - #{$label-width});
+
+    @media only screen and (max-width : $breakpoint) {
+      flex: 1 0 100%;
+    }
+  }
+
+  .color-picker-container {
     display: flex;
     flex-wrap: wrap;
+  }
+}
 
-    .color-picker {
-        position: relative;
-        height: 30px;
-        width: 30px;
-        margin: 10px 5px;
-        border: 2px solid rgb(255, 255, 255);
-        border-radius: 100%;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 10px rgba(114, 114, 114, 0.3) inset;
-        transform: scale(1);
-        transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+.color-picker {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  margin: 10px 5px;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 100%;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 10px rgba(114, 114, 114, 0.3) inset;
+  transform: scale(1);
+  transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
-        &:hover {
-            cursor: pointer;
-            transform: scale(1.3);
-        }
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+  }
 
-        &:after {
-            content: '✔';
-            display: block;
-            position: absolute;
-            line-height: 30px;
-            text-align: center;
-            left: 0;
-            right: 0;
-            transform: rotate(-20deg);
-            transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
-            opacity 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            pointer-events: none;
-            opacity: 0;
-            font-size: 32px;
-        }
+  &:after {
+    content: '✔';
+    display: block;
+    position: absolute;
+    line-height: 30px;
+    text-align: center;
+    left: 0;
+    right: 0;
+    transform: rotate(-20deg);
+    transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    opacity 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    pointer-events: none;
+    opacity: 0;
+    font-size: 32px;
+  }
 
-        &.active {
-            transform: scale(1.4);
+  &.active {
+    transform: scale(1.4);
 
-            &:after {
-                transform: rotate(0deg);
-                opacity: 1;
-            }
-        }
+    &:after {
+      transform: rotate(0deg);
+      opacity: 1;
     }
+  }
 }
 
 .content {
-    position: relative;
-    grid-area: content;
-    overflow: hidden;
-    background: linear-gradient(127deg, rgba(0, 255, 90, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 208, 255, 0.8), white 70.71%);
+  position: relative;
+  grid-area: content;
+  overflow: hidden;
+  background: linear-gradient(127deg, rgba(0, 255, 90, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 208, 255, 0.8), white 70.71%);
 }
 
 .canvas-wrapper {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #canvas {
-    image-rendering: pixelated;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+  image-rendering: pixelated;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .footer {
-    grid-area: footer;
+  grid-area: footer;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-areas: "header" "picker" "content" "footer";
-    grid-template-rows: max-content max-content auto max-content;
-    background-color: #2f3a43;
-    height: 100vh;
-    width: 100vw;
+  display: grid;
+  grid-template-areas: "header" "picker" "content" "footer";
+  grid-template-rows: max-content max-content auto max-content;
+  background-color: #2f3a43;
+  height: 100vh;
+  width: 100vw;
 }
 
 .grid-container > div {
-    padding: 0;
+  padding: 0;
 }
