--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -104,6 +104,13 @@ html, body {
   }
 }
 
+@for $i from 1 through length($colors) {
+  $color: nth($colors, $i);
+  [data-color-index="#{$i - 1}"] {
+    background-color: $color;
+  }
+}
+
 .content {
   position: relative;
   grid-area: content;
