--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -24,7 +24,7 @@ html, body {
   background: linear-gradient(to right, #399b4e, #869c99);
   display: flex;
   flex-wrap: wrap;
-  align-items:center;
+  align-items: center;
 
   $label-width: 200px;
 
@@ -33,14 +33,15 @@ html, body {
     flex: 1 0 calc(#{$label-width} - #{$padding * 2});
     padding: $padding;
 
-    @media only screen and (max-width : $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
       flex: 1 0 100%;
     }
 
     span {
       display: inline-block;
-      width: 17px;
-      line-height: 17px;
+      width: 20px;
+      line-height: 20px;
+      height: 20px;
       text-align: center;
       font-weight: bold;
       border: 1px solid white;
@@ -51,7 +52,7 @@ html, body {
   .row-content {
     flex: 1 0 calc(100% - #{$label-width});
 
-    @media only screen and (max-width : $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
       flex: 1 0 100%;
     }
   }
@@ -92,6 +93,8 @@ html, body {
     pointer-events: none;
     opacity: 0;
     font-size: 32px;
+    background-color: rgba(black, .3);
+    border-radius: 100%;
   }
 
   &.active {
@@ -108,6 +111,14 @@ html, body {
   $color: nth($colors, $i);
   [data-color-index="#{$i - 1}"] {
     background-color: $color;
+
+    &:after {
+      @if ($i == 2) {
+        color: lighten($color, 40%);
+      } @else {
+        color: lighten($color, 20%);
+      }
+    }
   }
 }
 
