Fixed tick becoming an emoji on Edge

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -83,6 +83,7 @@ html, body {
     content: '✔';
     display: block;
     position: absolute;
+    font-family: "Segoe UI Symbol", "Comic Sans MS", cursive, sans-serif;
     line-height: 30px;
     text-align: center;
     left: 0;
