Remove scale transition on previewPixel

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -151,7 +151,7 @@ html, body {
 .preview-pixel {
   display: none;
   position: absolute;
-  transition: top 50ms linear, left 50ms linear, height 100ms linear, width 100ms linear;
+  transition: top 50ms linear, left 50ms linear;
   box-shadow: 0 4px 9px 0 rgba(black, 0.13), 0 0 30px rgba(white, 0.18) inset;
   pointer-events: none;
 
