--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
+* {
+  box-sizing:border-box;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -54,6 +58,8 @@ html, body {
 
     @media only screen and (max-width: $breakpoint) {
       flex: 1 0 100%;
+      padding-top: 5px;
+      padding-bottom: 5px;
     }
 
     span {
@@ -70,15 +76,27 @@ html, body {
 
   .row-content {
     flex: 1 0 calc(100% - #{$label-width});
+    padding-right: 20px;
 
     @media only screen and (max-width: $breakpoint) {
       flex: 1 0 100%;
+      padding: 5px 20px;
+    }
+
+    select {
+      max-width: 40px * 16;
+      width: 100%;
     }
   }
 
   .color-picker-container {
     display: flex;
     flex-wrap: wrap;
+    padding-right: 20px;
+
+    @media only screen and (max-width: $breakpoint) {
+      padding: 5px 20px;
+    }
   }
 }
 
@@ -103,7 +121,7 @@ html, body {
     display: block;
     position: absolute;
     font-family: "Segoe UI Symbol", "Comic Sans MS", cursive, sans-serif;
-    line-height: 30px;
+    line-height: 26px;
     text-align: center;
     left: 0;
     right: 0;
@@ -112,7 +130,7 @@ html, body {
     opacity 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
     pointer-events: none;
     opacity: 0;
-    font-size: 32px;
+    font-size: 30px;
     background-color: rgba(black, .3);
     border-radius: 100%;
   }
