--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -260,12 +260,15 @@ html, body {
 }
 
 .grid-container {
+  // position and overflow are needed, it avoid hiding the android address bar and causing canvas scaling issues
+  position: absolute;
   display: grid;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
   grid-template-areas: "header" "picker" "content" "footer";
   grid-template-rows: max-content max-content auto max-content;
   background-color: #2f3a43;
-  height: 100vh;
-  width: 100vw;
 }
 
 .grid-container > div {
