--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -86,6 +86,13 @@ html, body {
     select {
       max-width: 40px * 16;
       width: 100%;
+      animation: fadeIn 200ms ease-out;
+      animation-fill-mode:forwards;
+      opacity: 0;
+
+      &.hidden {
+        animation: none;
+      }
     }
   }
 
@@ -93,6 +100,7 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     padding-right: 20px;
+    height: 50px;
 
     @media only screen and (max-width: $breakpoint) {
       padding: 5px 20px;
@@ -110,6 +118,9 @@ html, body {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 10px rgba(114, 114, 114, 0.3) inset;
   transform: scale(1);
   transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  animation: fadeIn 500ms ease-out;
+  animation-fill-mode:forwards;
+  opacity: 0;
 
   &:hover {
     cursor: pointer;
@@ -252,6 +263,15 @@ html, body {
   }
   100% {
     transform: scale(0.8) rotate(360deg);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
