--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -28,11 +28,21 @@ html, body {
   .left {
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $breakpoint) {
+      span {
+        display: block;
+      }
+    }
   }
   span {
     color: #eaeaea;
     font-size: 15px;
     margin: 5px;
+
+    @media only screen and (max-width: $breakpoint) {
+      display: none;
+    }
   }
 }
 
@@ -87,7 +97,7 @@ html, body {
       max-width: 40px * 16;
       width: 100%;
       animation: fadeIn 200ms ease-out;
-      animation-fill-mode:forwards;
+      animation-fill-mode: forwards;
       opacity: 0;
 
       &.hidden {
@@ -100,7 +110,7 @@ html, body {
     display: flex;
     flex-wrap: wrap;
     padding-right: 20px;
-    height: 50px;
+    min-height: 40px;
 
     @media only screen and (max-width: $breakpoint) {
       padding: 5px 20px;
@@ -119,8 +129,12 @@ html, body {
   transform: scale(1);
   transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   animation: fadeIn 500ms ease-out;
-  animation-fill-mode:forwards;
+  animation-fill-mode: forwards;
   opacity: 0;
+
+  @media only screen and (max-width: $breakpoint) {
+    margin: 0 5px;
+  }
 
   &:hover {
     cursor: pointer;
@@ -341,4 +355,39 @@ html, body {
     opacity: 1;
     bottom: 100%;
   }
+}
+
+@media only screen and (max-width: $breakpoint) {
+  .desktop-only {
+      display: none;
+  }
+}
+
+@media only screen and (min-width: $breakpoint) {
+  .mobile-only {
+      display: none;
+  }
+}
+
+.project-name {
+  font-weight: bold;
+}
+
+.project-address {
+  word-wrap: break-word;
+  font-size: 13px;
+}
+
+.pixel-message, .project-address {
+  font-family: monospace;
+  color: white;
+  background-color: #2f3a43;
+  padding: 2px 4px;
+  border-radius: 3px;
+  user-select: all;
+}
+
+p {
+  padding: 0;
+  margin: 10px 0;
 }
